--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -24,7 +24,10 @@ jobs:
       run: pip install --disable-pip-version-check --upgrade pip setuptools wheel
 
     - name: Try error
-      run: echo "::error file=.github/workflows/validate.yml,line=16,col=15::Something went wrong"
+      run: echo "::error file=.github/workflows/validate.yml,line=16,col=15::Something went wrong with CI config"
+
+    - name: Try error no changes
+      run: echo "::error file=LICENSE,line=3,col=5::Something went wrong with license file"
 
     - name: Install ddev
       run: pip install datadog-checks-dev[cli]
@@ -39,4 +42,3 @@ jobs:
 
     - name: Run validations
       run: ddev validate all
-
