--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -33,7 +33,10 @@ jobs:
       run: echo "::error file=LICENSE,line=3::License file error"
 
     - name: Annotation - unknown file
-      run: echo "::error file=foo.txt::Unknown error"
+      run: echo "::error file=foo.txt::Won't display"
+
+    - name: Annotation - no file
+      run: echo "::error::Won't display"
 
     - name: Install ddev
       run: pip install datadog-checks-dev[cli]
